# hood-normie

./: .bazelrc  .gitignore  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  README.md  config.example.json  requirements_lock.txt  snapshot.example.json  typecheck_test.py
examples/: BUILD.bazel  __init__.py  authenticate.py  list_accounts.py  list_accounts_test.py  list_holdings.py  list_holdings_test.py  paths.py  terminal.py
examples/rebalance/: BUILD.bazel  README.md  __init__.py  config.example.yaml  core.py  core_test.py  main.py
hood_mcp_py/: BUILD.bazel  __init__.py  client.py  client_test.py  mcp.py  oauth.py
hood_normie/: BUILD.bazel  __init__.py  accounts.py  client.py  client_test.py  mcp.py  oauth.py  types.py
hooks/: .pre-commit-config.yaml  BUILD.bazel  __init__.py  detect_secrets_hook.py  robinhood_account_detector.py  robinhood_account_detector_test.py  robinhood_account_number_detector.py  robinhood_account_number_detector_test.py
rb_rebalance/: __init__.py  accounts.py  authenticate.py  core.py  main.py  mcp.py  oauth.py  paths.py
tests/: core_test.py
