load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

package(default_visibility = ["//visibility:public"])

exports_files([".pre-commit-config.yaml"])

py_console_script_binary(
    name = "detect-secrets-hook",
    pkg = requirement("detect-secrets"),
    script = "detect-secrets-hook",
)
