load("@pip//:requirements.bzl", "requirement")
load("@rules_python//python:defs.bzl", "py_test")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

package(default_visibility = ["//visibility:public"])

exports_files([".pre-commit-config.yaml"])

py_console_script_binary(
    name = "detect-secrets-hook",
    pkg = requirement("detect-secrets"),
    script = "detect-secrets-hook",
)

py_test(
    name = "typecheck",
    srcs = ["typecheck_test.py"],
    main = "typecheck_test.py",
    data = [
        "//examples:typecheck_sources",
        "//examples/rebalance:typecheck_sources",
        "//hood_normie:typecheck_sources",
        "//hooks:typecheck_sources",
    ],
    deps = [
        requirement("mypy"),
        requirement("types-pyyaml"),
    ],
)
