module(name = "hood_normie", version = "0.1.0")

bazel_dep(name = "rules_python", version = "1.7.0")
bazel_dep(name = "pre-commit", version = "1.0.11")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "pip",
    python_version = "3.11",
    requirements_lock = "//:requirements_lock.txt",
)
use_repo(pip, "pip")
