load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "typecheck_sources",
    srcs = glob(["*.py"]),
)

py_library(
    name = "paths",
    srcs = ["__init__.py", "paths.py"],
)

py_binary(
    name = "authenticate",
    srcs = ["authenticate.py"],
    main = "authenticate.py",
    deps = [
        ":paths",
        "//hood_normie",
    ],
)

py_binary(
    name = "list_accounts",
    srcs = ["list_accounts.py"],
    main = "list_accounts.py",
    deps = [
        ":paths",
        "//hood_normie",
    ],
)

py_test(
    name = "list_accounts_test",
    srcs = ["list_accounts_test.py"],
    deps = [
        ":list_accounts",
    ],
)
