load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

py_library(
    name = "hood_mcp_py",
    srcs = [
        "__init__.py",
        "accounts.py",
        "client.py",
        "mcp.py",
        "oauth.py",
    ],
)

py_test(
    name = "client_test",
    srcs = ["client_test.py"],
    deps = [":hood_mcp_py"],
)

