load("@rules_python//python:defs.bzl", "py_library", "py_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "typecheck_sources",
    srcs = glob(["*.py"]),
)

py_library(
    name = "hood_normie",
    srcs = [
        "__init__.py",
        "accounts.py",
        "client.py",
        "mcp.py",
        "oauth.py",
        "types.py",
    ],
)

py_test(
    name = "client_test",
    srcs = ["client_test.py"],
    deps = [":hood_normie"],
)
