load("@pre-commit//pre-commit:defs.bzl", "pre_commit")
load("@pre-commit//pre-commit/hook:defs.bzl", "pre_commit_hook")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "detect-secrets-cli",
    srcs = [
        "__init__.py",
        "detect_secrets_hook.py",
        "robinhood_account_detector.py",
    ],
    main = "detect_secrets_hook.py",
    deps = ["@pip//detect_secrets"],
)

pre_commit_hook(
    name = "detect-secrets",
    stages = ["@pre-commit//pre-commit/stage:pre-commit"],
    src = ":detect-secrets-cli",
    summary = "Detect secrets",
    description = "Prevents secrets from being committed.",
)

py_test(
    name = "robinhood_account_detector_test",
    srcs = [
        "__init__.py",
        "robinhood_account_detector.py",
        "robinhood_account_detector_test.py",
    ],
    main = "robinhood_account_detector_test.py",
    deps = ["@pip//detect_secrets"],
)

pre_commit(
    name = "hooks",
    srcs = [":detect-secrets"],
)
