load("@pre-commit//pre-commit/hook:defs.bzl", "pre_commit_hook")
load("@pre-commit//pre-commit/install:defs.bzl", "pre_commit_install")
load("@pre-commit//pre-commit/run:defs.bzl", "pre_commit_run")
load("@rules_python//python:defs.bzl", "py_binary", "py_test")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "typecheck_sources",
    srcs = glob(["*.py"]),
)

py_binary(
    name = "robinhood-account-number-detector",
    srcs = ["robinhood_account_number_detector.py"],
    main = "robinhood_account_number_detector.py",
)

pre_commit_hook(
    name = "detect-secrets",
    stages = ["@pre-commit//pre-commit/stage:pre-commit"],
    src = "//:detect-secrets-hook",
    summary = "Detect secrets",
    description = "Prevents secrets from being committed.",
)

pre_commit_hook(
    name = "robinhood-account-numbers",
    stages = ["@pre-commit//pre-commit/stage:pre-commit"],
    src = ":robinhood-account-number-detector",
    summary = "Detect Robinhood account numbers",
    description = "Prevents Robinhood account numbers from being committed.",
)

py_test(
    name = "robinhood_account_number_detector_test",
    srcs = [
        "__init__.py",
        "robinhood_account_number_detector.py",
        "robinhood_account_number_detector_test.py",
    ],
    main = "robinhood_account_number_detector_test.py",
)

pre_commit_install(
    name = "install",
    src = "//:.pre-commit-config.yaml",
)

pre_commit_run(
    name = "run",
    src = "//:.pre-commit-config.yaml",
)

pre_commit_run(
    name = "all",
    src = "//:.pre-commit-config.yaml",
    args = ["--all-files"],
)
